--- a/Education.css
+++ b/Education.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Open Sans', sans-serif; 
+    font-family: 'Lato Thin', sans-serif; 
     font-weight: 700;
     margin: 0;
   }
@@ -12,23 +12,20 @@ body{
   }
   
    @font-face{
-    font-family: "Lovely Home";
-    src:local('Lovely Home'), 
-    url("Image/LovelyHome-9aBZ.ttf") format('truetype');
-
+    font-family: 'Lato Thin', sans-serif;
   }
 
 .brand-name ,.navbar-light .navbar-brand{
       /* font-family: "Brush Script MT"; */
       /* margin-bottom: 3px; */
-      font-family: "Lovely Home";
+      font-family: "Lato Thin";
       font-size: 50px;
       font-weight: bold;
       color: #351458;
   }
   @media only screen and (max-width : 764px){
       .brand-name ,.navbar-light .navbar-brand{
-      font-family: "Lovely Home";
+      font-family: "Lato Thin";
       font-size: 40px;
       font-weight: bold;
       color: #351458;
