--- a/contact.css
+++ b/contact.css
@@ -20,14 +20,12 @@ body{
       /* margin-bottom: 3px; */
       font-family: "Lato Thin";
       font-size: 50px;
-      font-weight: bold;
       color: #351458;
   }
   @media only screen and (max-width : 764px){
       .brand-name ,.navbar-light .navbar-brand{
       font-family: "Lato Thin";
       font-size: 40px;
-      font-weight: bold;
       color: #351458;
   }
 }
@@ -56,7 +54,7 @@ body{
     width: 300px;
     height: 300px;
     border: 10px solid;
-    border-color: #fd34d5;
+    border-color: #F3D4D5;
     box-shadow: 0 10px 30px -15px rgba(0, 0, 0, 0.897);;
 }
 
@@ -120,7 +118,7 @@ body{
     margin-bottom: 20px;
     font-size: 30px;
     color:white;
-    background-color: #6c63ff;
+    background-color: #F3D4D5;
     padding: 10px 30px 10px;
     margin-left: 12%;
     margin-right: 12%;
@@ -137,7 +135,7 @@ body{
 
   .sayhello{
      margin-top: 15px;
-     border:1px solid #6c63ff;
+     border:1px solid #F3D4D5;
      border-radius: 10px;
      padding: 10px 20px 10px;
   }
