--- a/skill.css
+++ b/skill.css
@@ -11,11 +11,8 @@ body{
     text-decoration: none;
   }
 
-  @font-face{
-    font-family: "Lovely Home";
-    src:local('Lovely Home'), 
-    url("Image/LovelyHome-9aBZ.ttf") format('truetype');
-
+   @font-face{
+    font-family: 'Lato Thin', sans-serif;
   }
 
 .brand-name ,.navbar-light .navbar-brand{
