--- a/Education.css
+++ b/Education.css
@@ -90,7 +90,7 @@ body{
     content:'';
     width:4px;
     height:calc(100% - 150px);
-    background: #6F67FF;
+    background: #F3D4D5;
     left:14px;
     top:5px;
     border-radius:4px;
