--- a/Project.css
+++ b/Project.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Lato Thin', sans-serif;
+    font-family: "Montserrat";
     margin: 0;
   }
 .body_section{
@@ -7,23 +7,21 @@ body{
 }
 
   @font-face{
-    font-family: 'Lato Thin', sans-serif;
+    font-family: "Montserrat";
 
   }
 
 .brand-name ,.navbar-light .navbar-brand{
       /* font-family: "Brush Script MT"; */
       /* margin-bottom: 3px; */
-      font-family: "Lato Thin";
+      font-family: "Montserrat";
       font-size: 50px;
-      font-weight: bold;
       color: #351458;
   }
   @media only screen and (max-width : 764px){
       .brand-name ,.navbar-light .navbar-brand{
-      font-family: "Lato Thin";
+      font-family: "Montserrat";
       font-size: 40px;
-      font-weight: bold;
       color: #351458;
   }
 }
