--- a/skill.css
+++ b/skill.css
@@ -52,7 +52,7 @@ body{
 }
 
 .Skill-heading{
-    font-family: "Lato Thin";
+    font-family: "Montserrat";
     font-size: 40px;
     font-weight: 300;
 }
